--- a/category.html
+++ b/category.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 HTML5 Template | Catagory</title>
+    <title>麦迪讯 | 文章分类</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -53,26 +53,26 @@
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.23</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>0.18</h4>
+                                                <h4>26℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.23</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>8.60</h4>
+                                                <h4>14℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>暴雨</span>
                                             </div>
                                             <div class="stock-index minus-index">
                                                 <h4>13.60</h4>
