--- a/category.html
+++ b/category.html
@@ -72,10 +72,10 @@
                                         <div class="single-stock-report">
                                             <div class="stock-values">
                                                 <span>麦迪逊天气</span>
-                                                <span>暴雨</span>
+                                                <span>6.23</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>13.60</h4>
+                                            <div class="text">
+                                                <h4>暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
