--- a/category.html
+++ b/category.html
@@ -74,7 +74,7 @@
                                                 <span>麦迪逊天气</span>
                                                 <span>6.23</span>
                                             </div>
-                                            <div class="text">
+                                            <div class="text" style="color:white">
                                                 <h4>暴雨</h4>
                                             </div>
                                         </div>
