--- a/category.html
+++ b/category.html
@@ -91,49 +91,49 @@
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.24.</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>8.60</h4>
+                                                <h4>25℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.24</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>13.60</h4>
+                                                <h4>18℃</h4>
                                             </div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>6.24</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>3.95</h4>
+                                            <div class="text" style="color:white">
+                                                <h4>暴雨</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.25</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>4.78</h4>
+                                                <h4>26℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>19℃</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>11.37</h4>
+                                            <div class="text" style="color:white">
+                                                <h4>雷阵雨</h4>
                                             </div>
                                         </div>
                                     </li>
