--- a/category.html
+++ b/category.html
@@ -82,19 +82,10 @@
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
-                                            </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>0.18</h4>
-                                            </div>
-                                        </div>
-                                        <div class="single-stock-report">
-                                            <div class="stock-values">
                                                 <span>麦迪逊最高气温</span>
                                                 <span>6.24.</span>
                                             </div>
-                                            <div class="stock-index plus-index">
+                                            <div class="stock-index minus-index">
                                                 <h4>25℃</h4>
                                             </div>
                                         </div>
@@ -103,34 +94,43 @@
                                                 <span>麦迪逊最低气温</span>
                                                 <span>6.24</span>
                                             </div>
-                                            <div class="stock-index minus-index">
+                                            <div class="stock-index plus-index">
                                                 <h4>18℃</h4>
+                                            </div>
+                                        </div>
+                                        <div class="single-stock-report">
+                                            <div class="stock-values">
+                                                <span>麦迪逊天气</span>
+                                                <span>6.24.</span>
+                                            </div>
+                                            <div class="stock-index minus-index">
+                                                <h4>6.24</h4>
                                             </div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>麦迪逊天气</span>
-                                                <span>6.24</span>
-                                            </div>
-                                            <div class="text" style="color:white">
-                                                <h4>暴雨</h4>
-                                            </div>
-                                        </div>
-                                        <div class="single-stock-report">
-                                            <div class="stock-values">
                                                 <span>麦迪逊最高气温</span>
                                                 <span>6.25</span>
                                             </div>
-                                            <div class="stock-index plus-index">
+                                            <div class="text" style="color:white">
                                                 <h4>26℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
                                                 <span>麦迪逊最低气温</span>
-                                                <span>19℃</span>
+                                                <span>6.25</span>
+                                            </div>
+                                            <div class="stock-index plus-index">
+                                                <h4>19℃</h4>
+                                            </div>
+                                        </div>
+                                        <div class="single-stock-report">
+                                            <div class="stock-values">
+                                                <span>麦迪逊天气</span>
+                                                <span>6.25.</span>
                                             </div>
                                             <div class="text" style="color:white">
                                                 <h4>雷阵雨</h4>
