--- a/category.html
+++ b/category.html
@@ -83,7 +83,7 @@
                                         <div class="single-stock-report">
                                             <div class="stock-values">
                                                 <span>麦迪逊最高气温</span>
-                                                <span>6.24.</span>
+                                                <span>6.24</span>
                                             </div>
                                             <div class="stock-index minus-index">
                                                 <h4>25℃</h4>
@@ -104,7 +104,7 @@
                                                 <span>6.24.</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>6.24</h4>
+                                                <h4>暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
