--- a/category.html
+++ b/category.html
@@ -101,7 +101,7 @@
                                         <div class="single-stock-report">
                                             <div class="stock-values">
                                                 <span>麦迪逊天气</span>
-                                                <span>6.24.</span>
+                                                <span>6.24</span>
                                             </div>
                                             <div class="text" style="color:white">
                                                 <h4>暴雨</h4>
@@ -130,7 +130,7 @@
                                         <div class="single-stock-report">
                                             <div class="stock-values">
                                                 <span>麦迪逊天气</span>
-                                                <span>6.25.</span>
+                                                <span>6.25</span>
                                             </div>
                                             <div class="text" style="color:white">
                                                 <h4>雷阵雨</h4>
