--- a/category.html
+++ b/category.html
@@ -74,8 +74,8 @@
                                                 <span>麦迪逊天气</span>
                                                 <span>6.23</span>
                                             </div>
-                                            <div class="text" style="color:white">
-                                                <h4>暴雨</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
@@ -103,8 +103,8 @@
                                                 <span>麦迪逊天气</span>
                                                 <span>6.24</span>
                                             </div>
-                                            <div class="text" style="color:white">
-                                                <h4>暴雨</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
@@ -132,8 +132,8 @@
                                                 <span>麦迪逊天气</span>
                                                 <span>6.25</span>
                                             </div>
-                                            <div class="text" style="color:white">
-                                                <h4>雷阵雨</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">雷阵雨</h4>
                                             </div>
                                         </div>
                                     </li>
