--- a/category.html
+++ b/category.html
@@ -322,18 +322,18 @@
                             <div class="row">
                                 <div class="col-12 col-md-5">
                                     <div class="editorial-post-thumb">
-                                        <img src="img/blog-img/bitcoin.jpg" alt="">
+                                        <img src="img/members-img/group1.jpg" alt="社团成员">
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-7">
                                     <div class="editorial-post-content">
                                         <!-- Post Tag -->
                                         <div class="gazette-post-tag">
-                                            <a href="#">Editorial</a>
+                                            <a href="#">Intro</a>
                                         </div>
-                                        <h2><a href="#" class="font-pt mb-15">Move over, bitcoin. <br>Here comes litecoin</a></h2>
-                                        <p class="editorial-post-date mb-15">March 29, 2016</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend. Nullam viverra tincidunt dolor, at pulvinar dui. Nullam at risus ut ipsum viverra posuere. Aliquam quis convallis enim. Nunc pulvinar molestie sem id blandit. Nunc venenatis interdum mollis...</p>
+                                        <h2><a href="about-us.html" class="font-pt mb-15">麦迪讯社团介绍</a></h2>
+                                        <p class="editorial-post-date mb-15">2019-2021</p>
+                                        <p>麦迪讯成立于2019年秋季，是一个开放，包容，和谐，奋进的新媒体社团。目前我们社团的公众号关注人数已经达到三千人以上。我们社团成立的初衷是为了服务麦迪逊当地的华人学生，为他们带来本地和国际的要闻。随着麦迪讯的发展，我们涉及的领域不断扩大。作为一个不断壮大的新媒体平台，我们现在立志于分享留学生的观点，增进中美年轻人之间的相互理解。现在我们社团已经包含了微信公众号，Facebook，BiliBili，喜马拉雅等平台，并且囊括了麦迪讯，新闻简讯，专栏，读书会等栏目，内容也从时事政治扩大到了金融，文学等领域。</p>
                                     </div>
                                 </div>
                             </div>
