--- a/category.html
+++ b/category.html
@@ -322,7 +322,7 @@
                             <div class="row">
                                 <div class="col-12 col-md-5">
                                     <div class="editorial-post-thumb">
-                                        <img src="img/members-img/group1.jpg" alt="社团成员">
+                                        <a href="about-us.html" class="font-pt mb-15"><img src="img/members-img/group1.jpg" alt="社团成员"></a>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-7">
