add badge images; apply to politics

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                     <!-- Breaking News Area -->
                     <div class="col-12 col-md-6">
                         <div class="breaking-news-area">
-                            <h5 class="breaking-news-title">Breaking news</h5>
+                            <h5 class="breaking-news-title">近日要闻</h5>
                             <div id="breakingNewsTicker" class="ticker">
                                 <ul>
-                                    <li><a href="#">Brexit breakthrough in Brussels comes after week of drama</a></li>
-                                    <li><a href="#">Brexit breakthrough in Brussels</a></li>
-                                    <li><a href="#">Brexit breakthrough in Brussels comes after week of drama</a></li>
-                                    <li><a href="#">Brex comes after week of drama</a></li>
-                                    <li><a href="#">Brexit breakthrough in Bweek of drama</a></li>
-                                    <li><a href="#">Brexit bssels comes after week of drama</a></li>
+                                    <li><a href="#">[2021/6/20]中国累计报告接种新冠疫苗超10亿剂次</a></li>
+                                    <li><a href="#">[2021/6/19]中国塔里木盆地新发现10亿吨超深油气区</a></li>
+                                    <li><a href="#">[2021/6/18]美俄日内瓦峰会结束</a></li>
+                                    <li><a href="#">[2021/6/16]中国神州12号飞船将在6月17日发射升空</a></li>
+                                    <li><a href="#">[2021/6/15]和贝佐斯飞往太空的票价：2800万美元</a></li>
+                                    <li><a href="#">[2021/6/13]欧盟峰会：中国，气候，发展中国家</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -53,87 +53,87 @@
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.23</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>0.18</h4>
+                                                <h4>26℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.23</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>8.60</h4>
+                                                <h4>14℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>6.23</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>13.60</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.24</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>0.18</h4>
+                                                <h4>25℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.24</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>8.60</h4>
+                                                <h4>18℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>6.24</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>13.60</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.25</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>3.95</h4>
+                                                <h4>26℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.25</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>4.78</h4>
+                                                <h4>19℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>6.25</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>11.37</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">雷阵雨</h4>
                                             </div>
                                         </div>
                                     </li>
@@ -157,7 +157,7 @@
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <img src="img/bg-img/top-advert.png" alt="header-add" >
+                            <img src="img/bg-img/madnews_bg.jpg" alt="header-add" >
                         </div>
                     </div>
                 </div>
