sample page update in each topic

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                             <a class="nav-link" href="society/Tokyo_Olympics.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="tech/single-post.html">科技 Tech</a>
+                                            <a class="nav-link" href="tech/Covid_Vaccine_Comparison.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="sport/Chinese_Women_Football.html">文体 Recreation</a>
