--- a/category.html
+++ b/category.html
@@ -151,13 +151,13 @@
                     <!-- Logo Area -->
                     <div class="col-12 col-md-4">
                         <div class="logo-area">
-                            <a href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="img/core-img/logo_madnews.png" alt="logo"></a>
                         </div>
                     </div>
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <a href="#"><img src="img/bg-img/top-advert.png" alt="header-add"></a>
+                            <img src="img/bg-img/madnews_bg.jpg" alt="header-add" >
                         </div>
                     </div>
                 </div>
@@ -173,36 +173,35 @@
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#gazetteMenu" aria-controls="gazetteMenu" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i> Menu</button>
                                 <div class="collapse navbar-collapse" id="gazetteMenu">
                                     <ul class="navbar-nav mr-auto">
-                                        <li class="nav-item active">
-                                            <a class="nav-link" href="#">Today <span class="sr-only">(current)</span></a>
-                                        </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">目录 Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item" href="index.html">Home</a>
-                                                <a class="dropdown-item" href="catagory.html">Catagory</a>
-                                                <a class="dropdown-item" href="single-post.html">Single Post</a>
-                                                <a class="dropdown-item" href="about-us.html">About Us</a>
-                                                <a class="dropdown-item" href="contact.html">Contact</a>
+                                                <a class="dropdown-item" href="index.html">首页 Home</a>
+                                                <a class="dropdown-item" href="category.html">分类 Category</a>
+                                                <a class="dropdown-item" href="about-us.html">介绍 About</a>
+                                                <a class="dropdown-item" href="contact.html">平台 Platform</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Politics</a>
+                                            <a class="nav-link" href="politics/the_eighteenth_brumaire_of_donald_trump_1.html">政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Lifestyle</a>
+                                            <a class="nav-link" href="business/single-post.html">财经 Business</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Travel</a>
+                                            <a class="nav-link" href="society/Tokyo_Olympics.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Health</a>
+                                            <a class="nav-link" href="tech/Covid_Vaccine_Comparison.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Entertainment</a>
+                                            <a class="nav-link" href="sport/Chinese_Women_Football.html">文体 Recreation</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">sport</a>
+                                            <a class="nav-link" href="news/single-post.html">新闻评论 Commentary</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="pandemic/pandemic.html">疫情 Pandemic</a>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
