--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
     <!-- Editorial Area End -->
 
     <!-- Footer Area Start -->
-    <footer class="footer-area bg-img background-overlay" style="background-image: url(img/bg-img/6.jpg);">
+    <footer class="footer-area bg-img background-overlay" style="background-image: url(img/bg-img/Mountain.jpg);">
         <!-- Top Footer Area -->
         <div class="top-footer-area section_padding_100_70">
             <div class="container">
@@ -800,7 +800,7 @@
                                 <h4 class="font-pt">国内平台</h4>
                             </div>
                             <ul class="footer-widget-menu">
-                                <li><a href="https://mp.weixin.qq.com/profile?src=3&timestamp=1623648786&ver=1&signature=SgOHfZ16dBahtMUYa7tq94ma*8A*nt8DyplMz80y-jBLN31ohwfx33YHMxa7SsQiFigdn1rnAgAC-Aqqj4cEmQ==">微信公众号</a></li>
+                                <li><a href="https://weixin.sogou.com/weixin?type=1&s_from=input&query=madison_news">微信公众号</a></li>
                                 <li><a href="https://space.bilibili.com/1911328064">哔哩哔哩</a></li>
                                 <li><a href="https://www.ximalaya.com/zhubo/224088273">喜马拉雅</a></li>
                             </ul>
@@ -852,9 +852,9 @@
                     <div class="col-12">
                         <div class="copywrite-text">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> 麦迪讯 All rights reserved | Template made by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-</p>
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> 麦迪讯 All rights reserved | Template made by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
                         </div>
                     </div>
                 </div>
