--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
     <!-- Editorial Area End -->
 
     <!-- Footer Area Start -->
-    <footer class="footer-area bg-img background-overlay" style="background-image: url(img/bg-img/Mountain.jpg);">
+    <footer class="footer-area bg-img background-overlay" style="background-image: url(img/bg-img/footer_bg.jpg);">
         <!-- Top Footer Area -->
         <div class="top-footer-area section_padding_100_70">
             <div class="container">
