Unifying banner format

--- a/business/single-post.html
+++ b/business/single-post.html
@@ -238,6 +238,7 @@
                             </div>
                             <h2 class="font-pt">有点像朋友圈？浅谈比特币交易系统的设计</h2>
                             <p>January 25, 2021</p>
+                            <p>作者：待添加</p>
                         </div>
                     </div>
                 </div>
