--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -234,10 +234,11 @@
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="#">Politics</a>
+                                <a href="">Pandemic</a>
                             </div>
-                            <h2 class="font-pt">新冠疫情 Covid-19 Pandemic</h2>
-                            <p>更新时间：March 15, 2021</p>
+                            <h2 class="font-pt">新冠疫情信息汇总</h2>
+                            <p>March 14, 2021</p>
+                            <p>作者：Atlas Guo</p>
                         </div>
                     </div>
                 </div>
