--- a/politics/the_eighteenth_brumaire_of_donald_trump_1.html
+++ b/politics/the_eighteenth_brumaire_of_donald_trump_1.html
@@ -234,7 +234,7 @@
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="#">Politics</a>
+                                <a href="">Politics</a>
                             </div>
                             <h2 class="font-pt">唐纳德·特朗普的雾月一十八日（上）</h2>
                             <p>January 20, 2021</p>
