--- a/sport/Chinese_Women_Football.html
+++ b/sport/Chinese_Women_Football.html
@@ -234,12 +234,11 @@
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="#">Society</a>
+                                <a href="#">Recreation</a>
                             </div>
-                            <p style="font-size: 30px"><b>麦迪讯体育专栏第三期</b></p>
                             <h2 class="font-pt">触目惊心的数据：<br />铿锵玫瑰值得关注，女足联赛更需发展</h2>
                             <p>April 17, 2021</p>
-                            <p>冬薯夏瓜 2021年4月17日</p>
+                            <p>作者：冬薯夏瓜</p>
                         </div>
                     </div>
                 </div>
