--- a/sport/Jiangsu_FC_Stopped.html
+++ b/sport/Jiangsu_FC_Stopped.html
@@ -252,7 +252,7 @@
                             <div class="gazette-post-tag">
                                 <a href="#">Society</a>
                             </div>
-                            <p style="font-size: 30px"><b>麦迪讯体育专栏第三期</b></p>
+                            <p style="font-size: 30px"><b>麦迪讯体育专栏第一期</b></p>
                             <h2 class="font-pt">中超冠军季前停摆，金源足球弊端尽显</h2>
                             <p>March 7, 2021</p>
                             <p>冬薯夏瓜 2021年3月7日</p>
