--- a/politics/the_eighteenth_brumaire_of_donald_trump_1.html
+++ b/politics/the_eighteenth_brumaire_of_donald_trump_1.html
@@ -332,7 +332,7 @@
                     <!-- Comment Area Start -->
                     <div class="comment_area section_padding_50 clearfix">
                         <div class="gazette-heading">
-                            <h4 class="font-bold">Discussion</h4>
+                            <h4 class="font-bold">评论区</h4>
                         </div>
 
                         <ol>
@@ -345,10 +345,9 @@
                                     </div>
                                     <!-- Comment Content -->
                                     <div class="comment-content">
-                                        <h5>John Doe</h5>
-                                        <span class="comment-date font-pt">December 18, 2017</span>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum nec, cursus nec ante.</p>
-                                        <a class="reply-btn" href="#">Reply <i class="fa fa-reply" aria-hidden="true"></i></a>
+                                        <h5>用户甲</h5>
+                                        <p>来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论。</p>
+                                        <a class="reply-btn" href="#">回复 <i class="fa fa-reply" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
                                 <ol class="children">
@@ -356,14 +355,14 @@
                                         <div class="comment-wrapper d-md-flex align-items-start">
                                             <!-- Comment Meta -->
                                             <div class="comment-author">
-                                                <img src="img/blog-img/25.jpg" alt="">
+                                                <img src="../img/blog-img/dm-3.jpg" alt="">
                                             </div>
                                             <!-- Comment Content -->
                                             <div class="comment-content">
-                                                <h5>John Doe</h5>
-                                                <span class="comment-date text-muted">December 18, 2017</span>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum nec, cursus nec ante.</p>
-                                                <a class="reply-btn" href="#">Reply <i class="fa fa-reply" aria-hidden="true"></i></a>
+                                                <h5>用户乙</h5>
+                                                <span class="comment-date font-pt text-muted">December 18, 2017</span>
+                                                <p>来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论。</p>
+                                                <a class="reply-btn" href="#">回复 <i class="fa fa-reply" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </li>
@@ -375,20 +374,20 @@
                     <div class="leave-comment-area clearfix">
                         <div class="comment-form">
                             <div class="gazette-heading">
-                                <h4 class="font-bold">leave a comment</h4>
+                                <h4 class="font-bold">留言板</h4>
                             </div>
                             <!-- Comment Form -->
                             <form action="#" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="contact-name" placeholder="Enter Your Full Name">
+                                    <input type="text" class="form-control" id="contact-name" placeholder="您的姓名">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="contact-email" placeholder="Email">
+                                    <input type="email" class="form-control" id="contact-email" placeholder="您的邮箱">
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                                    <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="您的评论"></textarea>
                                 </div>
-                                <button type="submit" class="btn leave-comment-btn">SUBMIT <i class="fa fa-angle-right ml-2"></i></button>
+                                <button type="submit" class="btn leave-comment-btn">提交评论<i class="fa fa-angle-right ml-2"></i></button>
                             </form>
                         </div>
                     </div>
