--- a/society/45_See_Through_Pigs_Digging_Cabbages.html
+++ b/society/45_See_Through_Pigs_Digging_Cabbages.html
@@ -436,7 +436,7 @@
             <p>这种对于社会资源的占有不仅是对自身阶级的巩固，也是把更低阶级的人排出在“社会资源”之外的能力，
               也就是所谓的机会阻隔。基于韦伯的概念（同时也包括一些马克思传统），资本主义社会大致分为了3个阶级：</p>
             <ol style="color:red">
-              <li>最顶层的资产阶级对于绝大多数社会资源有着极强的占有能力，尤其是他们对于生产资料，也就是资本的占有让他们有着极大的特权；/li>
+              <li>最顶层的资产阶级对于绝大多数社会资源有着极强的占有能力，尤其是他们对于生产资料，也就是资本的占有让他们有着极大的特权；</li>
               <li>中产阶级在韦伯的概念中有了更为清晰的表现，虽然他们当中很大多数对于生产资料与资本的占有能力十分弱小与无产阶级别无二致，
               很多时候也需要向资产阶级出售劳动。但他们却在如专业知识，教育，亦或是发言权上面相较于无产阶级有着极大的优势，
               而这些优势（尤其是专业知识与教育上的）也带给了他们相较于无产阶级在经济上的优势；</li>
