--- a/society/45_See_Through_Pigs_Digging_Cabbages.html
+++ b/society/45_See_Through_Pigs_Digging_Cabbages.html
@@ -322,7 +322,7 @@
               <img src="img/45_Super_High_School.png" alt="中国顶尖大学向超级中学招手"
                    width="750">
               <p style="color: grey; line-height: 30px">作为所谓“超级中学”的一员，衡水中学高中的学费为9360元/生/学期，
-                而根据河北公办普通高中学费标准，市区省级示范性高中每生每学期最高限价1000元。
+                <br />而根据河北公办普通高中学费标准，市区省级示范性高中每生每学期最高限价1000元。
               </p>
             </center>
           </div>
