--- a/society/40_Lying_Flat.html
+++ b/society/40_Lying_Flat.html
@@ -429,6 +429,8 @@
                             <p><b style="font-size:20px">其他社会专栏 </b> </p>
                             <p><a href="39_Gansu_Cross-Country_Marathon.html" style="color:blue" target="_blank" title="在新标签页打开上一期社会专栏">
                                     上一期：是天灾，更是人祸——甘肃越野马拉松的惨痛教训</a></p>
+                            <p><a href="41_Stars_Will_Shine_Above_The_Valley_Floor.html" style="color:blue" target="_blank" title="在新标签页打开上一期社会专栏">
+                                    下一期：就算是“土猪”，也可以仰望星空</a></p>
                         </div>
                     </div>
 
