--- a/society/category.html
+++ b/society/category.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 | 文章分类 Category</title>
+    <title>麦迪讯【社会类】文章 |  Madnews: Society</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/logo.jpg">
