--- a/society/40_Lying_Flat.html
+++ b/society/40_Lying_Flat.html
@@ -202,7 +202,7 @@
                                             <a class="nav-link" href="#">教育 Education</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">社会 Society</a>
+                                            <a class="nav-link" href="category.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#">科技 Tech</a>
