--- a/society/category.html
+++ b/society/category.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯【社会类】文章 |  Madnews: Society</title>
+    <title>麦迪讯【社会类】文章 | Madnews: Society</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/logo.jpg">
@@ -355,9 +355,9 @@
                 <div class="gazette-welcome-post">
                     <!-- Post Tag -->
                     <div class="gazette-post-tag">
-                        <a href="#">麦迪讯【社论】第40期</a>
+                        <a>麦迪讯【社论】第40期</a>
                     </div>
-                    <h2 class="font-pt">年轻人选择“躺平”有罪否？</h2>
+                    <a href="40_Lying_Flat.html" class="font-pt" target="_blank" title="在新标签页打开专栏"><h2 class="font-pt">年轻人选择“躺平”有罪否？</h2></a>
                     <p class="gazette-post-date">2021/05/31</p>
                     <!-- Post Thumbnail -->
                     <div class="blog-post-thumbnail my-5">
@@ -379,9 +379,9 @@
                 <div class="gazette-welcome-post">
                     <!-- Post Tag -->
                     <div class="gazette-post-tag">
-                        <a href="#">麦迪讯【社论】第39期</a>
+                        <a>麦迪讯【社论】第39期</a>
                     </div>
-                    <h2 class="font-pt">是天灾，更是人祸——甘肃越野马拉松的惨痛教训</h2>
+                    <a href="39_Gansu_Cross-Country_Marathon.html" class="font-pt" target="_blank" title="在新标签页打开专栏"><h2 class="font-pt">是天灾，更是人祸——甘肃越野马拉松的惨痛教训</h2></a>
                     <p class="gazette-post-date">2021/05/24</p>
                     <!-- Post Thumbnail -->
                     <div class="blog-post-thumbnail my-5">
@@ -403,9 +403,10 @@
                 <div class="gazette-welcome-post">
                     <!-- Post Tag -->
                     <div class="gazette-post-tag">
-                        <a href="#">麦迪讯【社论】第39期</a>
+                        <a>麦迪讯【社论】第39期</a>
                     </div>
-                    <h2 class="font-pt">记一次有必要的失误——由成都四十九中事件所想到的</h2>
+                    <a href="38_About_Chengdu_NO 49_Middle_School.html" class="font-pt"
+                               target="_blank" title="在新标签页打开专栏"><h2 class="font-pt">记一次有必要的失误——由成都四十九中事件所想到的</h2></a>
                     <p class="gazette-post-date">2021/05/17</p>
                     <!-- Post Thumbnail -->
                     <div class="blog-post-thumbnail my-5">
