--- a/society/category.html
+++ b/society/category.html
@@ -176,10 +176,10 @@
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">目录 Pages</a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="../index.html">首页 Home</a>
-                                            <a class="dropdown-item" href="../category.html">分类 Category</a>
-                                            <a class="dropdown-item" href="../about-us.html">介绍 About</a>
-                                            <a class="dropdown-item" href="../contact.html">平台 Platform</a>
+                                            <a class="dropdown-item" href="../../index.html">首页 Home</a>
+                                            <a class="dropdown-item" href="../../category.html">分类 Category</a>
+                                            <a class="dropdown-item" href="../../about-us.html">介绍 About</a>
+                                            <a class="dropdown-item" href="../../contact.html">平台 Platform</a>
                                         </div>
                                     </li>
                                     <li class="nav-item">
@@ -192,16 +192,16 @@
                                         <a class="nav-link" href="#">社会 Society</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../tech/Covid_Vaccine_Comparison.html">科技 Tech</a>
+                                        <a class="nav-link" href="../../tech/Covid_Vaccine_Comparison.html">科技 Tech</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../sport/Chinese_Women_Football.html">文体 Recreation</a>
+                                        <a class="nav-link" href="../../sport/Chinese_Women_Football.html">文体 Recreation</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../news/single-post.html">新闻评论 Commentary</a>
+                                        <a class="nav-link" href="../../news/single-post.html">新闻评论 Commentary</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
+                                        <a class="nav-link" href="../../pandemic/pandemic.html">疫情 Pandemic</a>
                                     </li>
                                 </ul>
                                 <!-- Search Form -->
